upd: сверстать основную часть сайта

--- a/blocks/content/content.css
+++ b/blocks/content/content.css
@@ -1,21 +1,21 @@
-.header {
-    padding: 45px 200px 0 200px;   
+.content {    
+    padding: 0 200px;
 }
 
 @media (max-width: 1024px) {
-    .header {
+    .content {
         padding: 0 100px;
     }
 }
 
 @media (max-width: 768px) {
-    .header {
+    .content {
         padding: 0 50px;
     }
 }
 
 @media (max-width: 460px) {
-    .header {
+    .content {
         padding: 0;
     }
 }
