--- a/pages/index.css
+++ b/pages/index.css
@@ -3,3 +3,21 @@
 @import url(../blocks/page/page.css);
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__logo/header__logo.css);
+@import url(../blocks/header/__border/header__border.css);
+@import url(../blocks/content/content.css);
+@import url(../blocks/profile/profile.css);
+@import url(../blocks/profile/__container/profile__container.css);
+@import url(../blocks/profile/__photo/profile__photo.css);
+@import url(../blocks/profile/__title/profile__title.css);
+@import url(../blocks/profile/__subtitle/profile__subtitle.css);
+@import url(../blocks/profile/__edit-button/profile__edit-buton.css);
+@import url(../blocks/profile/__add-button/profile__add-button.css);
+@import url(../blocks/galery/galery.css);
+@import url(../blocks/galery/__list/galery__list.css);
+@import url(../blocks/galery/__item/galery__item.css);
+@import url(../blocks/galery/__container/galery__container.css);
+@import url(../blocks/galery/__image/galery__image.css);
+@import url(../blocks/galery/__title/galery__title.css);
+@import url(../blocks/galery/__like/galery__like.css);
+@import url(../blocks/footer/footer.css);
+@import url(../blocks/footer/__copyright/footer__copyright.css);
