--- a/blocks/popup/__button/popup__button.css
+++ b/blocks/popup/__button/popup__button.css
@@ -10,8 +10,8 @@
     width: 358px;
     height: 50px;
     padding: 0;
-    margin-top: 48px;
-    margin-bottom: 37px;
+    margin-top: 18px;
+    margin-bottom: 15px;
     align-self: center;
     border: none;
 
@@ -19,4 +19,15 @@
 
 .popup__button:hover {
     opacity: .8;
+}
+
+@media (max-width: 768px) {
+    .popup__button {
+        font-size: 14px;
+        line-height: 17px;
+        width: 238px;
+        height: 46px;
+        margin-top: 15px;
+        margin-bottom: 25px;
+    }
 }
