--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -4,4 +4,5 @@
     background-color: #FFFFFF;    
     border-radius: 10px;
     box-shadow: 0px 0px 25px rgba(0, 0, 0, .15);
+    position: relative;
 }
