--- a/blocks/popup/__item/popup__item.css
+++ b/blocks/popup/__item/popup__item.css
@@ -3,14 +3,20 @@
     font-weight: normal;
     font-size: 14px;
     line-height: 17px;
-    padding: 0;
-    margin: 36px 54px 0 36px;       
+    padding: 0;           
     border: none;
     border-bottom: 1px  rgba(0, 0, 0, .2) solid;
     padding-bottom: 13px;
+    margin: 0 36px 30px 36px;
     
 }
 
 .popup__item:focus {
     outline: none; 
+}
+
+@media (max-width: 768px) {
+    .popup__item {        
+        margin: 0 22px 30px 22px ;        
+    }
 }
