--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -4,7 +4,15 @@
     font-size: 24px;
     line-height: 29px;
     margin: 0;
-    padding-top: 34px;
-    padding-left: 36px;
-    padding-right: 86px;
+    padding: 34px 86px 54px 36px ;
+    
+}
+
+@media (max-width: 768px) {
+    .popup__title {        
+        font-size: 18px;
+        line-height: 22px;
+        padding: 25px 22px 75px 22px ;
+        
+    }
 }
