--- a/blocks/content/content.css
+++ b/blocks/content/content.css
@@ -1,21 +1,23 @@
-.content {    
-    padding: 0 200px;
+.content {
+    max-width: 880px;
+    min-width: 300px;
+    margin: auto;
 }
 
 @media (max-width: 1024px) {
     .content {
-        padding: 0 100px;
+        max-width:  700px;
     }
 }
 
 @media (max-width: 768px) {
     .content {
-        padding: 0 50px;
+        max-width: 600px;
     }
 }
 
-@media (max-width: 460px) {
+@media (max-width: 600px) {
     .content {
-        padding: 0;
+        max-width: 460px;
     }
 }
