--- a/blocks/footer/__copyright/footer__copyright.css
+++ b/blocks/footer/__copyright/footer__copyright.css
@@ -1,5 +1,7 @@
 .footer__copyright {
     margin: 0;
+    padding-top: 47px;
+    padding-bottom: 60px;
     color: #545454;
     font-style: normal;
     font-weight: normal;
@@ -8,9 +10,12 @@
 
 }
 
-@media (max-width: 460px) {
+@media (max-width: 600px) {
     .footer__copyright{
         font-size: 14px;
         line-height: 17px;
+        padding-top: 28px;
+    padding-bottom: 36px;
+    padding-left: 19px;
     }
 }
