--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,21 +1,23 @@
 .footer {
-    padding: 47px 200px 60px 200px;   
+    max-width: 880px;
+    min-width: 300px;
+    margin: auto;
 }
 
 @media (max-width: 1024px) {
     .footer {
-        padding: 40px 100px 50px 100px;
+        max-width: 700px;
     }
 }
 
 @media (max-width: 768px) {
     .footer {
-        padding: 40px 50px 36px 50px;
+        max-width: 600px;
     }
 }
 
-@media (max-width: 460px) {
-    .footer{
-        padding: 28px 19px 36px 19px;
+@media (max-width: 600px) {
+    .footer {
+        max-width: 460px;
     }
 }
