--- a/blocks/galery/__list/galery__list.css
+++ b/blocks/galery/__list/galery__list.css
@@ -8,7 +8,14 @@
     
 }
 
-@media (max-width: 540px) {
+@media (max-width: 768px) {
+    .galery__list {
+        margin-left: 2%;
+        margin-right: 2%;
+    }
+}
+
+@media (max-width: 600px) {
     .galery__list {
         justify-content: center;
     }
