--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,21 +1,25 @@
 .header {
-    padding: 45px 200px 0 200px;   
+    border-bottom: 1px solid rgba(84, 84, 84, .7);
+    max-width: 880px;
+    min-width: 300px;
+    margin: auto;
+
 }
 
 @media (max-width: 1024px) {
     .header {
-        padding: 0 100px;
+        max-width: 700px;
     }
 }
 
 @media (max-width: 768px) {
     .header {
-        padding: 0 50px;
+        max-width: 600px;
     }
 }
 
-@media (max-width: 460px) {
+@media (max-width: 600px) {
     .header {
-        padding: 0;
+        max-width: 460px;
     }
 }
