--- a/blocks/popup/__button/popup__button.css
+++ b/blocks/popup/__button/popup__button.css
@@ -8,12 +8,14 @@
     background-color: #000000;
     border-radius: 2px;
     width: 358px;
-    height: 50px;
+    min-height: 50px;
     padding: 0;
     margin-top: 18px;
-    margin-bottom: 15px;
+    margin-bottom: 36px;
     align-self: center;
     border: none;
+    cursor: pointer;
+    transition: linear .5s;
 
 }
 
