--- a/blocks/popup/__close/popup__close.css
+++ b/blocks/popup/__close/popup__close.css
@@ -1,5 +1,5 @@
 .popup__close {
-    background-image: url(../../../images/popup-close-button.png);
+    background-image: url(../../../images/popup-close-button.svg);
     width: 32px;
     height: 32px;
     position: absolute;
@@ -7,6 +7,9 @@
     top: -40px;
     background-size: cover;
     background-position: center;
+    background-color: rgba(0, 0, 0, 0);
+    border: none;
+    transition: linear .5s;
 }
 
 .popup__close:hover {
