--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -5,4 +5,11 @@
     border-radius: 10px;
     box-shadow: 0px 0px 25px rgba(0, 0, 0, .15);
     position: relative;
+    width: 430px;
+}
+
+@media (max-width: 768px) {
+    .popup__container {        
+        width: 282px;        
+    }
 }
