--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -3,8 +3,8 @@
     font-weight: 900;
     font-size: 24px;
     line-height: 29px;
-    margin: 0;
-    padding: 34px 86px 54px 36px ;
+    
+    margin: 34px 0px 47px 36px ;
     
 }
 
@@ -12,7 +12,7 @@
     .popup__title {        
         font-size: 18px;
         line-height: 22px;
-        padding: 25px 22px 75px 22px ;
+        margin: 25px 22px 75px 22px ;
         
     }
 }
