--- a/blocks/profile/__subtitle/profile__subtitle.css
+++ b/blocks/profile/__subtitle/profile__subtitle.css
@@ -7,6 +7,9 @@
     grid-column-start: 2;
     margin: 0;
     padding-top: 5px;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
 
@@ -17,5 +20,11 @@
         font-size: 14px;
         line-height: 17px;
         
+        }
+}
+
+@media (max-width: 600px) {
+    .profile__subtitle {
+        padding-top: 12px;
         }
 }
