--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -4,7 +4,8 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: flex-start;
-    padding-top: 40px;
+    padding-top: 36px;
+    
     
 }
 
@@ -15,9 +16,9 @@
         }
 }
 
-@media (max-width: 460px) {
+@media (max-width: 600px) {
     .profile {
         padding: 0;
-        padding-top: 13.5%;       
+        margin-top: 38px;       
         }
 }
