--- a/blocks/profile/__container/profile__container.css
+++ b/blocks/profile/__container/profile__container.css
@@ -7,7 +7,7 @@
 @media (max-width: 768px) {
   .profile__container {
     grid-template-columns: 80% 20%;
-    grid-template-rows: 60% 25% 15%;
+    grid-template-rows: 2fr 1fr .5fr;
     justify-items: center;
   }
 }
