--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,6 +1,7 @@
 .popup {
-  display: none;
   background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  visibility: hidden;
   position: fixed;
   top: 0;
   left: 0;
@@ -8,4 +9,6 @@
   height: 100%;
   align-items: center;
   justify-content: center;
+  opacity: 0;
+  transition: visibility 1s, opacity 1s linear;
 }
