--- a/blocks/profile/__container/profile__container.css
+++ b/blocks/profile/__container/profile__container.css
@@ -1,7 +1,7 @@
 .profile__container {
   display: grid;
-  grid-template-columns: 1fr 2fr 1fr;
-  grid-template-rows: 1fr 1fr;
+  grid-template-columns: .6fr 1.3fr 1fr;
+  grid-template-rows: 1fr .8fr;
 }
 
 @media (max-width: 768px) {
