--- a/pages/index.css
+++ b/pages/index.css
@@ -18,6 +18,8 @@
 @import url(../blocks/galery/__image/galery__image.css);
 @import url(../blocks/galery/__title/galery__title.css);
 @import url(../blocks/galery/__like/galery__like.css);
+@import url(../blocks/galery/__like/_activ/galery__like_active.css);
+@import url(../blocks/galery/__delete-button/galery__delete-button.css);
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
 @import url(../blocks/popup/popup.css);
