--- a/pages/index.css
+++ b/pages/index.css
@@ -30,3 +30,9 @@
 @import url(../blocks/popup/__item/popup__item.css);
 @import url(../blocks/popup/__button/popup__button.css);
 @import url(../blocks/popup/__close/popup__close.css);
+@import url(../blocks/image-popup/image-popup.css);
+@import url(../blocks/image-popup/_opened/image-popup_opened.css);
+@import url(../blocks/image-popup/__container/image-popup__container.css);
+@import url(../blocks/image-popup/__picture/image-popup__picture.css);
+@import url(../blocks/image-popup/__text/image-popup__text.css);
+@import url(../blocks/image-popup/__close/image-popup__close.css);
