--- a/blocks/galery/__like/_activ/galery__like_active.css
+++ b/blocks/galery/__like/_activ/galery__like_active.css
@@ -1,9 +1,9 @@
 .galery__like_active {
   background-image: url(../../../../images/like-activ.svg);
   opacity: 1;
-  transition: none;
+  transition: linear .3s;
 }
 
 .galery__like_active:hover {
-  opacity: 1;
+  opacity: .5;
 }
