--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -10,5 +10,5 @@
   align-items: center;
   justify-content: center;
   opacity: 0;
-  transition: visibility 1s, opacity 1s linear;
+  transition: visibility .3s, opacity .3s linear;
 }
