--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -34,3 +34,7 @@
 @import url(../blocks/popup/__picture/popup__picture.css);
 @import url(../blocks/popup/__text/popup__text.css);
 @import url(../blocks/popup/_image/popup_image.css);
+@import url(../blocks/popup/__field/popup__field.css);
+@import url(../blocks/popup/__input-error/popup__input-error.css);
+@import url(../blocks/popup/__button/_inactive/popup__button_inactive.css);
+@import url(../blocks/popup/__item/_error/popup__item_error.css);
