--- a/src/blocks/profile/__edit-button/profile__edit-buton.css
+++ b/src/blocks/profile/__edit-button/profile__edit-buton.css
@@ -1,5 +1,6 @@
 .profile__edit-button {
   margin-top: 36px;
+  margin-left: 17px;
   background-image: url(../../../images/profile-edit-button.svg);
   background-repeat: no-repeat;
   background-position: center;
