--- a/src/blocks/profile/__title/profile__title.css
+++ b/src/blocks/profile/__title/profile__title.css
@@ -7,6 +7,7 @@
   grid-column-start: 2;
   margin: 0;
   padding-top: 22px;
+  padding-left: 30px;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
